# StreamFlow-Multi-Interface-Media-Fetcher

./: .env  .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
classes/: video_downloader.py
decorators/: connected.py  ffmpeg.py  timed.py
middlewares/: network_required.py  timed.py
routes/: download.py
schemas/: download_schema.py
src/: main.py
src/config/: __init__.py  output_options.py  theme.py
src/controls/: __init__.py  sidebar.py
src/controls/list/: __init__.py  list.py  task.py
src/db/: db.py
src/models/: __init__.py  base.py  list_model.py  settings_model.py
src/services/: __init__.py  list_service.py  settings_service.py
src/views/: __init__.py  download_view.py  list_view.py  router.py  settings_view.py  statistics_view.py
utils/: console.py
