[project]
name = "video-downloader"
version = "0.1.0"
description = "A Python app for downloading videos"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "S1mon009", email = "szymon.skalecki530@gmail.com" }
]
dependencies = [
  "annotated-types==0.7.0",
  "anyio==4.8.0",
  "arrow==1.3.0",
  "binaryornot==0.4.4",
  "certifi==2025.1.31",
  "chardet==5.2.0",
  "charset-normalizer==3.4.1",
  "click==8.1.8",
  "colorama==0.4.6",
  "cookiecutter==2.6.0",
  "fastapi==0.115.11",
  "SQLAlchemy==2.0.41",
  "httpx==0.28.1",
  "pydantic==2.10.6",
  "pydantic_core==2.27.2",
  "requests==2.32.3",
  "uvicorn==0.34.0",
  "watchdog==4.0.2",
  "watchfiles==1.0.4",
  "websockets==15.0.1",
  "flet==0.27.6"
]

[tool.flet]
org = "com.mycompany"
product = "youtube-downloader"
company = "Flet"
copyright = "Copyright (C) 2025 by Flet"

[tool.flet.app]
path = "src"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.27.6"}
pytest = "^8.0"
black = "^23.12"
isort = "^6.0"
mypy = "^1.5"
